# rag-base

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  README.md  きそ.md
.github/workflows/: azure-static-web-apps-nice-pond-0b583b800.yml  azure-static-web-apps.yml
backend/: .funcignore  .gitignore  README.md  env.example  function_app.py  host.json  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py  admin.py  chat.py  health.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  auth.py  exceptions.py  logging.py
backend/app/models/: __init__.py  chunk.py  embedding.py  file.py
backend/app/repositories/: __init__.py  chunk_repository.py  embedding_repository.py  file_repository.py
backend/app/services/: __init__.py  file_service.py  rag_service.py  storage_service.py
backend/function_app/: __init__.py
frontend/: README.md  admin.html  index.html  login.html  staticwebapp.config.json
frontend/css/: style.css
frontend/js/: admin.js  auth.js  chat.js
migrations/: 001_initial_schema.sql
scripts/: set-env-vars-from-file.sh  set-env-vars.sh
